--- a/main.css
+++ b/main.css
@@ -5,13 +5,13 @@
     font-family: Roboto, sans-serif;
 }
 
-.container{
+.container {
     max-width: 1024px;
     margin: 0 auto;
     width: 100%;
 }
 
-header .container{
+header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,19 +20,21 @@ header .container{
 header {
     padding: 16px 0 0;
     border: 1px solid #ccc;
+    margin-bottom: 56px;
 }
 
-.submenu{
+.submenu {
     display: none;
     list-style: none;
-    border:1px solid red;
+    border: 1px solid red;
+    background-color: #fff;
     position: absolute;
     left: 0;
     width: 300px;
     top: 100%;
 }
 
-.menu > li{
+.menu>li {
     float: left;
     list-style: none;
     padding: 16px;
@@ -40,20 +42,148 @@ header {
     position: relative;
 }
 
-.clear{
+.clear {
     clear: both;
 }
 
-.menu li:hover .submenu{
+.menu li:hover .submenu {
     display: block;
 }
 
-.menu li:hover{
+.menu li:hover {
     border-color: red;
     cursor: pointer;
 }
 
-.submenu li{
+.submenu li {
     display: block;
     padding: 8px;
+}
+
+.conteudo {
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+.noticia img {
+    max-width: 100%;
+}
+
+.destaque {
+    margin-bottom: 56px;
+}
+
+.destaque .noticia a {
+    display: flex;
+    font-size: 2em;
+}
+
+.destaque .noticia img {
+    margin-right: 8px;
+}
+
+section h2 {
+    margin-bottom: 32px;
+}
+
+aside {
+    padding-left: 40px;
+}
+
+aside .noticia {
+    margin-bottom: 24px;
+}
+
+.noticias {
+    display: grid;
+    grid-template-columns: repeat(3, 32.6%);
+    column-gap: 1%;
+    row-gap: 5%;
+}
+
+.botao-menu{
+        display: none;
+    }
+
+@media screen and (max-width: 767px) {
+    .conteudo {
+        display: block;
+    }
+
+    .container {
+        max-width: 90%;
+    }
+
+    .destaque .noticia a {
+        display: block;
+        font-size: 1.5em;
+    }
+
+    .destaque .noticia img {
+        margin-right: 0px;
+    }
+
+    .noticias {
+        display: block;
+    }
+
+    .noticias .noticia {
+        width: 100%;
+        margin-bottom: 32px;
+    }
+
+    aside {
+        padding-left: 0px;
+    }
+
+    header div.container {
+        flex-direction: column;
+    }
+
+
+    .submenu {
+        display: block;
+
+        width: 100%;
+        position: relative;
+        border: none;
+    }
+
+    .menu{
+        display: none;
+    }
+
+    .menu>li {
+        clear: both;
+    }
+
+    .submenu li {
+        display: block;
+        padding: 8px;
+    }
+
+    .botao-menu{
+        display: flex;
+        justify-content: center;
+        margin-top: 16px;
+        padding-bottom: 16px;
+    }
+
+    .botao-menu button{
+        padding: 8px;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .destaque .noticia a {
+        font-size: 1.5em;
+    }
+
+    .noticias{
+        grid-template-columns: repeat(2, 49%);
+        column-gap: 1%;
+    }
 }
